[package]
name = "dataquery"
version = "1.0.0"
edition = "2021"
authors = ["ast <asteroidable@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http', 'axum'] }
worker-macros = { version = "0.6", features = ['http'] }
axum = { version = "0.8", default-features = false }
tower-service = "0.3.3"
tokio = { version = "1.47.1", features = ["sync", "rt"] }
wasm-bindgen-futures = "0.4.54"
encoding_rs = "0.8"
jmespath = "0.4"
