[package]
name = "dataquery"
version = "1.1.0"
edition = "2021"
authors = ["ast <asteroidable@gmail.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http', 'axum'] }
worker-macros = { version = "0.6", features = ['http'] }
wasm-bindgen-futures = "0.4.54"
encoding_rs = "0.8"
jmespath = "0.4"
urlencoding = "2.1.3"
